--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,9 @@
 body {
+  display: grid;
+  place-items: center;
+  margin: 0;
+  height: 100vh;
+  width: 100%;
   counter-reset: game;
 }
 
@@ -7,5 +12,127 @@ input:checked {
 }
 
 .total-count::after {
-  content: counter(game);
+  content: " Los puntos son  " counter(game);
+}
+
+.phone {
+  position: absolute;
+  height: 600px;
+  width: 300px;
+  border: 8px solid #333;
+  border-radius: 40px;
+  background-color: #ccefff;
+  box-shadow: 0 19px 38px rgba(0, 0, 0, 0.3), 0 15px 12px rgba(0, 0, 0, 0.22);
+}
+
+[class^="layer-"] {
+  position: absolute;
+}
+
+/** bunny 1 */
+.layer-1 {
+  bottom: 0;
+  right: 60px;
+  z-index: 1;
+  height: 450px;
+  width: 80px;
+  background-color: white;
+}
+
+/** bunny 2 */
+.layer-2 {
+  bottom: 0;
+  left: 60px;
+  z-index: 2;
+  height: 450px;
+  width: 80px;
+  background-color: white;
+}
+
+/** wall 1 */
+.layer-3 {
+  left: 0;
+  right: 0;
+  bottom: 0;
+  z-index: 3;
+  margin: 0 auto;
+  width: 220px;
+  height: 400px;
+  background-color: wheat;
+}
+
+/** bunny 3 */
+.layer-4 {
+  bottom: 0;
+  left: 20px;
+  z-index: 4;
+  height: 350px;
+  width: 80px;
+  background-color: white;
+}
+
+/** wall 2 */
+.layer-5 {
+  left: 0;
+  bottom: 0;
+  z-index: 5;
+  margin: 0 auto;
+  width: 220px;
+  height: 300px;
+  background-color: rgb(183, 161, 120);
+}
+
+/** bunny 4 */
+.layer-6 {
+  bottom: 0;
+  right: 30px;
+  z-index: 6;
+  height: 250px;
+  width: 80px;
+  background-color: white;
+}
+
+/** wall 3 */
+.layer-7 {
+  right: 0;
+  bottom: 0;
+  z-index: 7;
+  margin: 0 auto;
+  width: 160px;
+  height: 200px;
+  background-color: wheat;
+}
+
+/** lawn 1 */
+.layer-8 {
+  left: 0;
+  right: 0;
+  bottom: 0;
+  z-index: 8;
+  margin: 0 auto;
+  width: 200px;
+  height: 160px;
+  background-color: rgb(19, 103, 93);
+}
+
+/** lawn 2 */
+.layer-9 {
+  left: 0;
+  bottom: 0;
+  z-index: 9;
+  margin: 0 auto;
+  width: 125px;
+  height: 120px;
+  background-color: rgb(174, 219, 213);
+}
+
+/** lawn 3 */
+.layer-10 {
+  right: 0;
+  bottom: 0;
+  z-index: 10;
+  margin: 0 auto;
+  width: 125px;
+  height: 120px;
+  background-color: rgb(174, 219, 213);
 }
