--- a/css/styles.css
+++ b/css/styles.css
@@ -36,7 +36,7 @@ input:checked {
   z-index: 1;
   height: 450px;
   width: 80px;
-  background-color: white;
+  background-color: rgba(119, 136, 153, 0.295);
 }
 
 /** bunny 2 */
@@ -46,7 +46,7 @@ input:checked {
   z-index: 2;
   height: 450px;
   width: 80px;
-  background-color: white;
+  background-color: rgba(119, 136, 153, 0.295);
 }
 
 /** wall 1 */
@@ -68,7 +68,7 @@ input:checked {
   z-index: 4;
   height: 350px;
   width: 80px;
-  background-color: white;
+  background-color: rgba(119, 136, 153, 0.295);
 }
 
 /** wall 2 */
@@ -89,7 +89,7 @@ input:checked {
   z-index: 6;
   height: 250px;
   width: 80px;
-  background-color: white;
+  background-color: rgba(119, 136, 153, 0.295);
 }
 
 /** wall 3 */
@@ -135,4 +135,52 @@ input:checked {
   width: 125px;
   height: 120px;
   background-color: rgb(174, 219, 213);
+}
+
+/** bunny head */
+.head {
+  background-color: white;
+  border-radius: 50%;
+}
+
+.head__eye {
+}
+.head__eye--left {
+}
+.head__eye--right {
+}
+
+.left-ear-outer,
+.right-ear-outer {
+  position: absolute;
+  width: 20px;
+  height: 50px;
+  background-color: #fff;
+  border-radius: 90%;
+}
+
+.left-ear-outer {
+  left: 10px;
+}
+
+.right-ear-outer {
+  right: 10px;
+}
+
+.left-ear-inner,
+.right-ear-inner {
+  position: absolute;
+  width: 10px;
+  height: 50px;
+  background-color: pink;
+  border-radius: 90%;
+}
+.left-ear-inner {
+  left: 15px;
+  top: 8px;
+}
+
+.right-ear-inner {
+  right: 15px;
+  top: 8px;
 }
