--- a/css/styles.css
+++ b/css/styles.css
@@ -36,7 +36,6 @@ input:checked {
   z-index: 1;
   height: 450px;
   width: 80px;
-  background-color: rgba(119, 136, 153, 0.295);
 }
 
 /** bunny 2 */
@@ -46,7 +45,6 @@ input:checked {
   z-index: 2;
   height: 450px;
   width: 80px;
-  background-color: rgba(119, 136, 153, 0.295);
 }
 
 /** wall 1 */
@@ -68,7 +66,6 @@ input:checked {
   z-index: 4;
   height: 350px;
   width: 80px;
-  background-color: rgba(119, 136, 153, 0.295);
 }
 
 /** wall 2 */
@@ -89,7 +86,6 @@ input:checked {
   z-index: 6;
   height: 250px;
   width: 80px;
-  background-color: rgba(119, 136, 153, 0.295);
 }
 
 /** wall 3 */
@@ -139,15 +135,29 @@ input:checked {
 
 /** bunny head */
 .head {
+  position: absolute;
+  left: 0;
+  right: 0;
+  top: 30px;
+  height: 80px;
   background-color: white;
   border-radius: 50%;
 }
 
 .head__eye {
+  position: absolute;
+  top: 15px;
+  width: 4px;
+  height: 4px;
+  background-color: #333;
+  border-radius: 50%;
 }
+
 .head__eye--left {
+  left: 30px;
 }
 .head__eye--right {
+  right: 30px;
 }
 
 .left-ear-outer,
