--- a/css/styles.css
+++ b/css/styles.css
@@ -12,11 +12,27 @@ body {
   margin: 0;
   height: 100vh;
   width: 100%;
-  counter-reset: game;
+  counter-reset: score;
+}
+
+input [type="checkbox"] {
+  position: relative;
+  top: 0;
+  z-index: 2;
+  margin: 0;
+  width: 80px;
+  height: 50px;
+  appearance: none;
+  cursor: pointer;
+}
+
+input [type="checkbox"]:focus {
+  appearance: none;
+  outline: none;
 }
 
 input:checked {
-  counter-increment: game;
+  counter-increment: score;
 }
 
 .total-count::after {
@@ -47,6 +63,38 @@ input:checked {
   width: 80px;
 }
 
+.layer-1 {
+  /* animation-name: hopping;
+  animation-duration: 1s;
+  animation-timing-function: ease-in-out;
+  animation-iteration-count: infinite; */
+  animation: hopping 1s ease-in-out infinite;
+}
+
+/* .layer-2 {
+  animation: hopping 1.1s ease-in-out infinite;
+} */
+
+.layer-4 {
+  animation: hopping 0.9s ease-in-out infinite;
+}
+
+.layer-6 {
+  animation: hopping 1.4s ease-in-out infinite;
+}
+
+@keyframes hopping {
+  0% {
+    bottom: 0;
+  }
+  25% {
+    bottom: -80px;
+  }
+  100% {
+    bottom: 0;
+  }
+}
+
 /** bunny 2 */
 .layer-2 {
   bottom: 0;
@@ -71,7 +119,7 @@ input:checked {
 /** bunny 3 */
 .layer-4 {
   bottom: 0;
-  left: 20px;
+  left: 15px;
   z-index: 4;
   height: 350px;
   width: 80px;
@@ -83,7 +131,7 @@ input:checked {
   bottom: 0;
   z-index: 5;
   margin: 0 auto;
-  width: 220px;
+  width: 200px;
   height: 300px;
   background-color: rgb(183, 161, 120);
 }
@@ -154,8 +202,25 @@ input:checked {
   top: 15px;
   width: 4px;
   height: 4px;
-  background-color: #333;
+  background-color: gray;
   border-radius: 50%;
+  animation-name: blink;
+  animation-duration: 2s;
+  animation-iteration-count: infinite;
+}
+
+@keyframes blink {
+  0% {
+    height: 4px;
+  }
+  5% {
+    transform: translate(0px, 2px);
+    height: 1px;
+  }
+  10% {
+    transform: translate(0px, 0px);
+    height: 4px;
+  }
 }
 
 .head__eye--left {
