--- a/css/styles.css
+++ b/css/styles.css
@@ -4,6 +4,8 @@
   --light-brown: #bf624c;
   --dark-green: #51af5e;
   --light-green: #51af5e;
+  --white: #fff;
+  --pink: #ecbcc4;
   --shadow: 0 19px 38px rgba(0, 0, 0, 0.3), 0 15px 12px rgba(0, 0, 0, 0.22);
   --bunny-width: 80px;
   --bunny-height: 450px;
@@ -12,7 +14,6 @@
 body {
   display: grid;
   place-items: center;
-  margin: 0;
   width: 100%;
   height: 100vh;
   counter-reset: score;
@@ -51,8 +52,8 @@ body {
   background-color: #ccefff;
   border: 8px solid #333;
   border-radius: 40px;
-  box-shadow: var(--shadow); /* After */
-  overflow: hidden; /* After */
+  box-shadow: var(--shadow);
+  overflow: hidden;
 }
 
 /** General layers */
@@ -84,8 +85,8 @@ input:checked {
 /** Bunny layers  */
 /** bunny 1 */
 .layer-1 {
-  bottom: 0;
   right: 60px;
+  bottom: 0;
   z-index: 1;
   width: var(--bunny-width);
   height: var(--bunny-height);
@@ -121,11 +122,11 @@ input:checked {
 /** bunny head */
 .head {
   position: absolute;
-  left: 0;
-  right: 0;
   top: 30px;
+  right: 0;
+  left: 0;
   height: 80px;
-  background-color: white;
+  background-color: var(--white);
   border-radius: 50%;
 }
 
@@ -139,57 +140,59 @@ input:checked {
   border-radius: 50%;
 }
 
-.head__eye--left {
-  left: 30px;
-}
 .head__eye--right {
   right: 30px;
 }
 
+.head__eye--left {
+  left: 30px;
+}
+
 /** bunny ears */
+.right-ear-inner,
+.left-ear-inner {
+  position: absolute;
+  top: 8px;
+  width: 10px;
+  height: 50px;
+  background-color: var(--pink);
+  border-radius: 90%;
+}
+
+.right-ear-inner {
+  right: 15px;
+}
+
+.left-ear-inner {
+  left: 15px;
+}
+
 .left-ear-outer,
 .right-ear-outer {
   position: absolute;
   width: 20px;
   height: 50px;
-  background-color: #fff;
+  background-color: var(--white);
   border-radius: 90%;
-}
-
-.left-ear-outer {
-  left: 10px;
 }
 
 .right-ear-outer {
   right: 10px;
 }
 
-.left-ear-inner,
-.right-ear-inner {
-  position: absolute;
-  width: 10px;
-  height: 50px;
-  background-color: pink;
-  border-radius: 90%;
-}
-.left-ear-inner {
-  left: 15px;
-  top: 8px;
-}
-
-.right-ear-inner {
-  right: 15px;
-  top: 8px;
+.left-ear-outer {
+  left: 10px;
 }
 
 /** Wall layers  */
 /** wall 1 */
 .layer-3 {
-  left: 0;
   right: 0;
   bottom: 0;
+  left: 0;
   z-index: 3;
-  margin: 0 auto;
+  margin-right: auto;
+  margin-left: auto;
   width: 220px;
   height: 400px;
 }
@@ -207,7 +210,8 @@ input:checked {
   right: 0;
   bottom: 0;
   z-index: 7;
-  margin: 0 auto;
+  margin-right: auto;
+  margin-left: auto;
   width: 160px;
   height: 200px;
 }
@@ -217,21 +221,20 @@ input:checked {
 .layer-3,
 .layer-5,
 .layer-7 {
-  position: absolute;
   background-color: var(--light-brown);
-  box-shadow: var(--shadow);
   border-radius: 15px;
+  box-shadow: var(--shadow);
   overflow: hidden;
 }
 
 .land {
+  width: 100%;
+  height: 30px;
   background: linear-gradient(135deg, var(--dark-green) 25%, transparent 25%) -50px
       0,
     linear-gradient(-135deg, var(--dark-green) 25%, transparent 25%) -50px 0,
     linear-gradient(45deg, var(--light-brown) 25%, transparent 25%),
     linear-gradient(-45deg, transparent 25%, var(--dark-brown) 25%);
-  width: 100%;
-  height: 30px;
   background-size: 33px 30px;
 }
 
@@ -244,9 +247,9 @@ input:checked {
 
 /** lawn 1 */
 .layer-8 {
-  left: 0;
   right: 0;
   bottom: 0;
+  left: 0;
   z-index: 8;
   margin: 0 auto;
   width: 200px;
@@ -256,27 +259,27 @@ input:checked {
 .layer-8__left-lawn,
 .layer-8__center-lawn,
 .layer-8__right-lawn {
+  position: absolute;
+  bottom: 0;
+  width: 80px;
+  display: inline-block;
   background: var(--dark-green);
   border-radius: 40px 40px 0 0;
-  bottom: 0;
-  display: inline-block;
-  position: absolute;
-  width: 80px;
 }
 
 .layer-8__left-lawn {
-  height: 70%;
   left: 0;
+  height: 70%;
 }
 
 .layer-8__center-lawn {
-  height: 100%;
   left: 60px;
+  height: 100%;
 }
 
 .layer-8__right-lawn {
-  height: 80%;
   left: 130px;
+  height: 80%;
 }
 
 /** lawn 2 */
@@ -303,7 +306,6 @@ input:checked {
 .layer-10__left-cloud,
 .layer-10__right-cloud {
   display: inline-block;
-  position: absolute;
   background-color: #fff;
 }
 
@@ -315,8 +317,8 @@ input:checked {
 }
 
 .layer-9__right-cloud {
-  left: 80px;
   bottom: 0;
+  left: 80px;
   width: 40px;
   height: 60%;
   border-radius: 0 40px 30px 0;
@@ -337,8 +339,8 @@ input:checked {
   border-radius: 40px 40px 0 0;
 }
 
-/** Animaciones */
-/** Animación ojos */
+/** Animations */
+/** Eye animation */
 .head__eye {
   animation: blink 2s infinite;
 }
@@ -377,7 +379,7 @@ input:checked {
   }
 }
 
-/** Animación saltos */
+/** Hopping animations */
 .layer-1 {
   /* animation-name: hopping;
   animation-duration: 1s;
