--- a/css/styles.css
+++ b/css/styles.css
@@ -16,6 +16,7 @@ body {
   place-items: center;
   width: 100%;
   height: 100vh;
+  background-color: #110f0f;
   counter-reset: score;
 }
 
@@ -63,14 +64,13 @@ body {
 
 /** Inputs */
 input[type="checkbox"] {
-  position: relative;
-  z-index: 2;
+  position: absolute;
+  top: 0;
+  z-index: 1;
   width: 80px;
   height: 50px;
   cursor: pointer;
   appearance: none;
-  margin: 0;
-  top: 0;
 }
 
 input[type="checkbox"]:focus {
@@ -83,39 +83,40 @@ input:checked {
 }
 
 /** Bunny layers  */
+/** All bunnies */
+.layer-1,
+.layer-2,
+.layer-4,
+.layer-6 {
+  bottom: 0;
+  width: var(--bunny-width);
+}
+
 /** bunny 1 */
 .layer-1 {
   right: 60px;
-  bottom: 0;
   z-index: 1;
-  width: var(--bunny-width);
   height: var(--bunny-height);
 }
 
 /** bunny 2 */
 .layer-2 {
-  bottom: 0;
   left: 60px;
   z-index: 2;
-  width: var(--bunny-width);
   height: var(--bunny-height);
 }
 
 /** bunny 3 */
 .layer-4 {
-  bottom: 0;
   left: 15px;
   z-index: 4;
-  width: var(--bunny-width);
   height: 350px;
 }
 
 /** bunny 4 */
 .layer-6 {
-  bottom: 0;
   right: 30px;
   z-index: 6;
-  width: var(--bunny-width);
   height: 250px;
 }
 
@@ -359,32 +360,8 @@ input:checked {
   }
 }
 
-/** Animación selectores */
-.layer-1,
-.layer-2,
-.layer-4,
-.layer-6 input[type="checkbox"] {
-  animation: bunny 1.5s ease-in-out infinite;
-}
-
-@keyframes bunny {
-  0% {
-    bottom: 0;
-  }
-  25% {
-    bottom: -80px;
-  }
-  100% {
-    bottom: 0;
-  }
-}
-
 /** Hopping animations */
 .layer-1 {
-  /* animation-name: hopping;
-  animation-duration: 1s;
-  animation-timing-function: ease-in-out;
-  animation-iteration-count: infinite; */
   animation: hopping 1s ease-in-out infinite;
 }
 
@@ -401,6 +378,26 @@ input:checked {
 }
 
 @keyframes hopping {
+  0% {
+    bottom: 0;
+  }
+  25% {
+    bottom: -80px;
+  }
+  100% {
+    bottom: 0;
+  }
+}
+
+/** Input animations */
+.layer-1,
+.layer-2,
+.layer-4,
+.layer-6 input[type="checkbox"] {
+  animation: bunny 1.5s ease-in-out infinite;
+}
+
+@keyframes bunny {
   0% {
     bottom: 0;
   }
